Java 9 code updates